--- a/public/css/form.css
+++ b/public/css/form.css
@@ -32,9 +32,9 @@ body{
 
 .container1{
     position: relative;
-    margin-top:50px;
-    width: 600px;
-    height: 650px;
+    margin-top:100px;
+    width: 800px;
+    height: 600px;
     border-radius: 20px;
     padding: 40px;
     box-sizing: border-box;
@@ -42,7 +42,28 @@ body{
     box-shadow: 14px 14px 20px rgba(67, 90, 133, 0.99), -14px -14px 20px rgba(179, 199, 237, 0.99);
 }
 
+.marg {
+  margin-right:20px;
+}
+.marg2 {
+  margin-right:35px;
+}
 
+.marg3 {
+  margin-right:50px;
+}
+.back{
+  color: white;
+  margin-top: 30px;
+  background: rgba(22,34,57,0.99);
+  width:100px;
+  height: 40px;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: 900;
+  box-shadow:6px 6px 6px #cbced1, -6px -6px -6px white;
+  transition: 0.5s;
+}
 
 .brand-title{
     margin-top: 10px;
@@ -108,3 +129,90 @@ h1{
     left: 0;
 
 }
+
+.main-banner {
+    position: relative;
+    max-height: 100%;
+    overflow: hidden;
+    margin-bottom: -7px;
+  }
+  
+  #bg-video {
+      min-width: 100%;
+      min-height: 100vh;
+      max-width: 100%;
+      max-height: 100vh;
+      object-fit: cover;
+      z-index: -1;
+  }
+  
+  #bg-video::-webkit-media-controls {
+      display: none !important;
+  }
+  
+  .video-overlay {
+      position: absolute;
+      background-color: rgba(22,34,57,0.85);
+      top: 0;
+      left: 0;
+      bottom: 7px;
+      width: 100%;
+  }
+  
+  .main-banner .caption {
+    text-align: center;
+    position: absolute;
+    width: 80%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+  
+  .main-banner .caption h6 {
+    margin-top: 0px;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #fff;
+    letter-spacing: 1px;
+  }
+  
+  .main-banner .caption h2 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 64px;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: #fff;
+    letter-spacing: 1px;
+  }
+  
+  .main-banner .caption h2 em {
+    font-style: normal;
+    color: #f5a425;
+    font-weight: 900;
+  }
+  
+  @media screen and (max-width: 1180px) {
+  
+    .main-banner .caption h6 {
+      font-weight: 500;
+    }
+  
+    .main-banner .caption h2 {
+      font-size: 58px;
+    }
+  
+  }
+  @media screen and (max-width: 767px) {
+  
+    .main-banner .caption h6 {
+      font-weight: 500;
+    }
+  
+    .main-banner .caption h2 {
+      font-size: 36px;
+    }
+  
+  }
+  
