--- a/public/welcome/template.css
+++ b/public/welcome/template.css
@@ -1,13 +1,3 @@
-/*
-    
-TemplateMo 557 Grad School
-
-https://templatemo.com/tm-557-grad-school
-
-*/
-
-
-/* Basic */
 
 a {
 	color: #3CF;
@@ -272,6 +262,10 @@ a.menu-link { display: none; }
 .main-nav li.active a {
     border: 2px solid #f5a425;
 }
+ul li:hover a{
+  padding-left: 50px;
+}
+
 
 @media (max-width: 950px) {
   .main-nav li:hover a,
