--- a/public/style.css
+++ b/public/style.css
@@ -307,7 +307,7 @@ a.menu-link { display: none; }
 
 .card {
   /* Add shadows to create the "card" effect */
-  margin-left: 100px;
+  margin-left: 20px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 }
@@ -324,12 +324,15 @@ a.menu-link { display: none; }
 }
 .column {
   float: left;
-  width: 25%;
+  width: 20%;
   padding: 0 10px;
+  margin-left: 10px;
 }
 
 /* Remove extra left and right margins, due to padding */
-.row {margin: 0 -5px;}
+.row {margin: 0 -5px;
+margin-top: 20px;
+padding-top: 30px;}
 
 /* Clear floats after the columns */
 .row:after {
@@ -339,13 +342,24 @@ a.menu-link { display: none; }
 }
 
 /* Responsive columns */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 300px) {
   .column {
     width: 100%;
     display: block;
     margin-bottom: 20px;
+   
   }
 
 }
 
+.welcomelabel
+{
+  margin-top:100px;
+  padding-left:35px;
+  padding-right:35px;
+}
+.namedesign {
+  font-family: 'Nunito', sans-serif;
+  color:yellow;
+}
 
