--- a/public/style.css
+++ b/public/style.css
@@ -321,6 +321,14 @@ a.menu-link { display: none; }
 .container {
   background: #ecf3f8;
   padding: 10px 16px;
+  text-align : center;
+}
+
+.Acontainer {
+  background: #ecf3f8;
+  padding: 10px 16px;
+  text-align : center;
+  margin-left: 40px;
 }
 .column {
   float: left;
@@ -360,6 +368,6 @@ padding-top: 30px;}
 }
 .namedesign {
   font-family: 'Nunito', sans-serif;
-  color:yellow;
+  color:rgb(9, 31, 47);
 }
 
